# multipart-write

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: author.rs
src/: lib.rs
src/io/: mod.rs  multi_async_writer.rs  multi_io_writer.rs
src/stream/: assemble.rs  assembled.rs  collect_complete.rs  collect_completed.rs  collect_writer.rs  complete_when.rs  complete_with.rs  feed_multipart_write.rs  into_multipart_write.rs  map_writer.rs  mod.rs  try_complete_when.rs  try_send.rs  write_complete.rs  write_until.rs
src/write/: and_then.rs  bootstrapped.rs  buffered.rs  clear_with.rs  collect_parts.rs  complete.rs  extend.rs  fanout.rs  feed.rs  filter.rs  filter_map.rs  filter_map_part.rs  filter_part.rs  flush.rs  fold_ret.rs  fold_sent.rs  for_each_recv.rs  for_each_written.rs  forever.rs  freeze.rs  freeze_when.rs  from_extend.rs  frozen.rs  fuse.rs  lift.rs  map.rs  map_err.rs  map_ok.rs  map_part.rs  map_ret.rs  map_sent.rs  mod.rs  multipart_writer_sink.rs  on_complete.rs  ready_part.rs  resolve.rs  returning.rs  send.rs  send_flush.rs  send_part.rs  (+4 more)
tests/: main.rs
