[package]
name = "multipart-write"
version = "0.1.0-beta.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quasi-coherent/multipart-write"
readme = "README.md"
description = "Sink-like interface for writing an object in parts"
edition = "2024"
authors = ["Daniel Donohue <d.michael.donohue@gmail.com>"]
keywords = ["futures", "async", "sink"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
futures-core = "0.3.31"
pin-project = "1.1.10"
tokio = { version = "1.47.0", default-features = false, optional = true }

[dev-dependencies]
futures-util = "0.3.31"
tokio = { version = "1.47.0", default-features = false, features = ["macros", "rt-multi-thread"] }